Fixed scrollbar colours
- Fixed scrollbar colours.
- Added rules to style active scrollbar.

--- a/gui/_typography.scss
+++ b/gui/_typography.scss
@@ -7,6 +7,7 @@
 
 a {
   color: var(--link-color);
+  text-decoration: none;
 
   &:focus {
     outline: 1px dotted var(--link-color);
@@ -14,6 +15,7 @@ a {
 
   &:hover {
     color: var(--link-color-hovered);
+    text-decoration: underline;
   }
 }
 
